samples/_failures_safe/1761556950_4d6386_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_df2cdf24.c: In function ‘tokenize’:
./samples/SAFE/__tmp_df2cdf24.c:181:34: error: expected ‘)’ at end of input
  181 |         } else if (parse_operator
      |                   ~              ^
      |                                  )
./samples/SAFE/__tmp_df2cdf24.c:181:9: error: expected declaration or statement at end of input
  181 |         } else if (parse_operator
      |         ^
./samples/SAFE/__tmp_df2cdf24.c:181:9: error: expected declaration or statement at end of input
